<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_workouts"
        android:icon="@drawable/ic_workouts_black_24dp"
        android:title="@string/title_workouts" />

    <item
        android:id="@+id/navigation_record"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_record" />

    <item
        android:id="@+id/navigation_exercises"
        android:icon="@drawable/ic_exercises_black_24dp"
        android:title="@string/title_exercises" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>