<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:layout_marginTop="14dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginVertical="10dp"
            android:orientation="vertical"
            android:background="@drawable/card_rounded">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/preferences_text"
                android:textColor="?android:attr/textColorPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:text="@string/weight_units_text"
                    android:textColor="?android:attr/textColorSecondary"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/unitsToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleSelection="true"
                    app:selectionRequired="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnKg"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kg_text" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnLb"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lb_text" />
                </com.google.android.material.button.MaterialButtonToggleGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:text="@string/set_sort_order_text"
                    android:textColor="?android:attr/textColorSecondary"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/sortToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleSelection="true"
                    app:selectionRequired="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnTime"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_text" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnName"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_text" />
                </com.google.android.material.button.MaterialButtonToggleGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/rest_timer_text"
                    android:textColor="?android:attr/textColorSecondary"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <Spinner
                    android:id="@+id/restTimerSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:padding="20dp"
            android:orientation="vertical"
            android:background="@drawable/card_rounded">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/data_text"
                android:textColor="?android:attr/textColorPrimary"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:padding="10dp"
            android:orientation="vertical"
            android:background="@drawable/card_rounded">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="10dp"
                android:text="@string/about_text"
                android:textColor="?android:attr/textColorPrimary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:background="?attr/selectableItemBackground"
                android:text="@string/how_to_use_text"
                android:textColor="?android:attr/textColorSecondary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:background="?attr/selectableItemBackground"
                android:text="@string/about_app_text"
                android:textColor="?android:attr/textColorSecondary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:background="?attr/selectableItemBackground"
                android:text="@string/privacy_policy_text"
                android:textColor="?android:attr/textColorSecondary"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>